--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -58,7 +58,7 @@
 				</ScrollView>
 			</LinearLayout>
 			<LinearLayout android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:background="#c6c3c6"
+				android:layout_height="wrap_content" android:background="@android:drawable/bottom_bar"
 				android:orientation="horizontal" android:gravity="center">
 				<Button android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:minWidth="100dip"
@@ -146,7 +146,7 @@
 				</ScrollView>
 			</LinearLayout>
 			<LinearLayout android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:background="#c6c3c6"
+				android:layout_height="wrap_content" android:background="@android:drawable/bottom_bar"
 				android:orientation="horizontal" android:gravity="center">
 				<Button android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:minWidth="100dip"
