--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -11,11 +11,8 @@
 				<ScrollView android:layout_width="fill_parent"
 					android:layout_height="wrap_content">
 					<LinearLayout android:layout_width="fill_parent"
-						android:layout_height="wrap_content" android:orientation="vertical">
-						<TextView android:id="@+id/message"
-							android:textAppearance="?android:attr/textAppearanceSmall"
-							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_marginBottom="5dip" />
+						android:layout_height="wrap_content" android:orientation="vertical"
+						android:padding="4dip">
 						<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 							android:textStyle="bold" android:layout_width="wrap_content"
 							android:layout_height="wrap_content" android:text="@string/login_activity_host_label" />
@@ -42,8 +39,8 @@
 							android:inputType="textEmailAddress" android:minWidth="300dip" />
 						<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 							android:textStyle="bold" android:singleLine="true"
-							android:layout_marginTop="2dip" android:layout_width="wrap_content"
-							android:layout_height="wrap_content" android:text="@string/login_activity_password_label" />
+							android:layout_width="wrap_content" android:layout_height="wrap_content"
+							android:text="@string/login_activity_password_label" />
 						<EditText android:id="@+id/password_edit"
 							android:singleLine="true" android:layout_width="fill_parent"
 							android:layout_height="wrap_content" android:minWidth="250dip"
@@ -52,8 +49,7 @@
 							android:inputType="textPassword" />
 						<TextView android:id="@+id/message_bottom"
 							android:textAppearance="?android:attr/textAppearanceSmall"
-							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_marginBottom="5dip" />
+							android:layout_width="wrap_content" android:layout_height="wrap_content" />
 					</LinearLayout>
 				</ScrollView>
 			</LinearLayout>
@@ -71,7 +67,7 @@
 			<LinearLayout android:layout_width="fill_parent"
 				android:layout_height="wrap_content" android:layout_weight="1">
 				<ScrollView android:layout_width="fill_parent"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:padding="4dip">
 					<LinearLayout android:layout_width="fill_parent"
 						android:layout_height="wrap_content" android:orientation="vertical">
 						<TextView android:textAppearance="?android:attr/textAppearanceSmall"
