Added an encryption spinner

--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -31,6 +31,12 @@
 							android:inputType="number" />
 						<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 							android:textStyle="bold" android:layout_width="wrap_content"
+							android:layout_height="wrap_content" android:text="@string/login_activity_encryption_label" />
+						<Spinner android:id="@+id/encryption_spinner" android:layout_width="fill_parent"
+							android:layout_height="wrap_content" android:drawSelectorOnTop="true"
+							android:prompt="@string/login_activity_encryption_prompt" />
+						<TextView android:textAppearance="?android:attr/textAppearanceSmall"
+							android:textStyle="bold" android:layout_width="wrap_content"
 							android:layout_height="wrap_content" android:text="@string/login_activity_username_label" />
 						<EditText android:id="@+id/username_edit"
 							android:singleLine="true" android:layout_width="fill_parent"
