added home phone number as new field

--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -130,6 +130,14 @@
 							android:inputType="text" />
 						<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 							android:textStyle="bold" android:layout_width="wrap_content"
+							android:layout_height="wrap_content" android:text="@string/login_activity_homephone_label" />
+						<EditText android:singleLine="true" android:layout_width="fill_parent"
+							android:layout_height="wrap_content" android:scrollHorizontally="true"
+							android:capitalize="none" android:autoText="false"
+							android:minWidth="300dip" android:id="@+id/homephone_edit"
+							android:inputType="text" />
+						<TextView android:textAppearance="?android:attr/textAppearanceSmall"
+							android:textStyle="bold" android:layout_width="wrap_content"
 							android:layout_height="wrap_content" android:text="@string/login_activity_mail_label" />
 						<EditText android:singleLine="true" android:layout_width="fill_parent"
 							android:layout_height="wrap_content" android:scrollHorizontally="true"
