--- a/res/xml/account_preferences.xml
+++ b/res/xml/account_preferences.xml
@@ -10,6 +10,7 @@
         android:key="account_settings"
         android:summary="Sync frequency, notifications, etc."
         android:title="Account Settings" >
+        <!--  TODO Move to other class -->
         <intent android:action="com.example.android.samplesync.ACCOUNT_SETUP"
             android:targetPackage="de.danielweisser.android.ldapsync"
             android:targetClass="de.danielweisser.android.ldapsync.authenticator.AccountSettingsActivity" />
