--- a/app/src/main/res/layout/sync_error_layout.xml
+++ b/app/src/main/res/layout/sync_error_layout.xml
@@ -20,5 +20,5 @@
  android:id="@+id/buttonDismissErrorReport"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
- android:text="@string/dismiss"/>
+ android:text="@string/done"/>
 </LinearLayout>
